--- a/app/src/main/res/layout/fragment_scrolling_search.xml
+++ b/app/src/main/res/layout/fragment_scrolling_search.xml
@@ -34,12 +34,22 @@
             android:clipToPadding="false"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <TextView
+            <!--TextView
                 android:clipToPadding="false"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/random_text"
-                android:textSize="18sp"/>
+                android:textSize="18sp"/-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycler_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
 
         </android.support.v4.widget.NestedScrollView>
 
