--- a/app/src/main/res/layout/fragment_scrolling_search.xml
+++ b/app/src/main/res/layout/fragment_scrolling_search.xml
@@ -23,7 +23,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="64dp"
-                android:background="@color/light_gray"
+                android:background="@color/colorPrimary"
                 app:layout_scrollFlags="scroll|enterAlways"/>
 
         </android.support.design.widget.AppBarLayout>
@@ -63,7 +63,7 @@
         app:floatingSearch_dimBackground="false"
         app:floatingSearch_dismissOnOutsideTouch="true"
         app:floatingSearch_leftActionMode="showHamburger"
-        app:floatingSearch_menu="@menu/toolbar_menu"
+        app:floatingSearch_menu="@menu/toolbar_menu_main"
         app:floatingSearch_searchBarMarginLeft="5dp"
         app:floatingSearch_searchBarMarginRight="5dp"
         app:floatingSearch_searchBarMarginTop="5dp"
