--- a/app/src/main/res/layout/activity_visited.xml
+++ b/app/src/main/res/layout/activity_visited.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.java.group19.VisitedActivity">
+    tools:context="com.java.group19.activity.VisitedActivity">
 
 </android.support.constraint.ConstraintLayout>
