--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -20,12 +20,12 @@
             android:id="@+id/nav_theme"
             android:icon="@drawable/ic_wb_sunny_black"
             android:title="夜间模式"
-            app:actionLayout="@layout/theme_switch" />
+            app:actionLayout="@layout/nav_switch" />
         <item
             android:id="@+id/nav_text_mode"
             android:icon="@drawable/ic_image_black"
             android:title="文本模式"
-            app:actionLayout="@layout/text_mode_switch" />
+            app:actionLayout="@layout/nav_switch" />
 
     </group>
 
