--- a/app/src/main/res/layout/nav_switch.xml
+++ b/app/src/main/res/layout/nav_switch.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <android.support.v7.widget.SwitchCompat
-        android:id="@+id/text_mode_switch"
+        android:id="@+id/nav_switch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical" />
