--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -13,13 +13,14 @@
         android:layout_height="wrap_content"
         android:layout_gravity="start"
         android:layout_margin="5dp"
-        android:textSize="16sp" />
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/news_intro"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp" />
+        android:layout_margin="5dp"
+        android:textSize="16sp"/>
 
     <LinearLayout
         android:id="@+id/news_images"
