--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -3,4 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/category_text"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"/>
+    android:layout_height="wrap_content"
+    android:textSize="20sp"
+    android:layout_margin="5dp"/>
