--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -7,24 +7,24 @@
         <item
             android:id="@+id/nav_favorite"
             android:icon="@drawable/ic_favorite_border_black"
-            android:title="收藏夹" />
+            android:title="@string/nav_favorite_title" />
         <item
             android:id="@+id/nav_shield"
             android:icon="@drawable/ic_pause_circle_outline_black"
-            android:title="屏蔽设置" />
+            android:title="@string/nav_shield_title" />
         <item
             android:id="@+id/nav_history"
             android:icon="@drawable/ic_history_black"
-            android:title="浏览记录" />
+            android:title="@string/nav_history_title" />
         <item
             android:id="@+id/nav_theme"
             android:icon="@drawable/ic_wb_sunny_black"
-            android:title="夜间模式"
+            android:title="@string/nav_night_mode_title"
             app:actionLayout="@layout/nav_switch" />
         <item
             android:id="@+id/nav_text_mode"
             android:icon="@drawable/ic_image_black"
-            android:title="文本模式"
+            android:title="@string/nav_text_mode_title"
             app:actionLayout="@layout/nav_switch" />
 
     </group>
