--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -4,5 +4,7 @@
     android:id="@+id/category_text"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:textColor="@color/black"
+    android:textColorHighlight="@color/colorPrimary"
     android:textSize="20sp"
     android:layout_margin="5dp"/>
