--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -11,7 +11,7 @@
     <in.srain.cube.image.CubeImageView
         android:id="@+id/news_image"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1" />
 
     <LinearLayout
