fix CRAZY BUG(image.setvisible in recycleview)

--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -11,8 +11,9 @@
     <in.srain.cube.image.CubeImageView
         android:id="@+id/news_image"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:scaleType="centerCrop"/>
 
     <LinearLayout
         android:orientation="vertical"
