--- a/app/src/main/res/layout/category_select_view.xml
+++ b/app/src/main/res/layout/category_select_view.xml
@@ -38,7 +38,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/colorPrimary" />
+            android:background="?attr/colorPrimary" />
 
         <LinearLayout
             android:layout_width="match_parent"
