--- a/app/src/main/res/layout/detail_item.xml
+++ b/app/src/main/res/layout/detail_item.xml
@@ -55,9 +55,12 @@
                 android:id="@+id/detail_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
+                android:layout_marginBottom="25dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginTop="5dp"
                 android:lineSpacingExtra="8sp"
-                android:textSize="20sp" />
+                android:textSize="18sp" />
 
             <LinearLayout
                 android:id="@+id/detail_image_layout"
