--- a/app/src/main/res/layout/category_select_view.xml
+++ b/app/src/main/res/layout/category_select_view.xml
@@ -7,7 +7,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_margin="5dp">
 
         <ImageView
             android:id="@+id/view_control"
@@ -29,16 +30,18 @@
 
     </LinearLayout>
 
+    <View
+        android:id="@+id/category_split_view"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="?attr/colorPrimary" />
+
     <LinearLayout
         android:id="@+id/category_control_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="?attr/colorPrimary" />
+        android:orientation="vertical"
+        android:layout_margin="5dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -50,14 +53,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/category_view_set_title"
-                android:textColor="@color/black"
+                android:textColor="?attr/textColorPrimary"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
                 android:textSize="18sp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/category_view_set_change_title"
-                android:textSize="14sp" />
+                android:textColor="?attr/textColorSecondary"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:textSize="16sp" />
 
         </LinearLayout>
 
