--- a/app/src/main/res/layout/forbidden_word_item.xml
+++ b/app/src/main/res/layout/forbidden_word_item.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp"
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/forbidden_word_item_content"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:textSize="18sp" />
 
-   <ImageView
-       android:id="@+id/forbidden_word_item_delete"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:src="@drawable/ic_close_black"/>
+    <ImageView
+        android:id="@+id/forbidden_word_item_delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_close_black" />
 
 </LinearLayout>
