--- a/app/src/main/res/layout/recycler_news_item.xml
+++ b/app/src/main/res/layout/recycler_news_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.java.group19.component.NewsCardView
+<com.java.group19.component.NewsItem
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
