--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,8 +14,10 @@
         <item name="colorPrimaryDark">@color/light_color_primary_dark</item>
         <item name="colorAccent">@color/light_color_primary</item>
         <item name="windowsBackGround">@color/light_window_back_ground</item>
+        <item name="windowsBackGroundDark">@color/light_window_back_ground_dark</item>
         <item name="textColorPrimary">@color/light_text_title_color</item>
         <item name="textColorSecondary">@color/light_text_content_color</item>
+
     </style>
 
     <style name="DarkTheme" parent="Theme.AppCompat.NoActionBar">
@@ -23,8 +25,10 @@
         <item name="colorPrimaryDark">@color/dark_color_primary_dark</item>
         <item name="colorAccent">@color/dark_color_primary</item>
         <item name="windowsBackGround">@color/dark_window_back_ground</item>
+        <item name="windowsBackGroundDark">@color/dark_window_back_ground_dark</item>
         <item name="textColorPrimary">@color/dark_text_title_color</item>
         <item name="textColorSecondary">@color/dark_text_content_color</item>
+
     </style>
 
 </resources>
