--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="?attr/windowsBackGround">
 
     <!--android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -28,7 +29,8 @@
         <com.java.group19.component.DetailLayout
             android:id="@+id/detail_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:background="?attr/windowsBackGround"/>
 
     <!--/android.support.v4.widget.NestedScrollView-->
 
